[package]
name = "FileSite"
version = "0.1.0"
authors = ["baijunty <baijunty@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "install"
path = "src/main.rs"

[[bin]]
name = "file_server"
path = "src/proxy.rs"
[[bin]]
name = "file_site"
path = "src/filesizte.rs"
[dependencies]
windows-service ={ git="https://github.com/mullvad/windows-service-rs.git"}
actix-web = "2"
actix-rt = "1"
actix-http = "1.0.1"
actix-files = "0.2.1"
actix-multipart = "0.2.0"
mime = "0.3.16"
serde = "1.0.104"
quote = "1.0.2"
futures = "0.3.4"
rusqlite = "0.21.0"
md5 = "0.7.0"
bytes = "0.5.4"
env_logger = "0.7.1"
[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
