[package]
name = "FileSite"
version = "0.1.0"
authors = ["baijunty <baijunty@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "install"
path = "src/main.rs"

[[bin]]
name = "proxy"
path = "src/proxy.rs"
[dependencies]
clap = "2.33.0"
windows-service ={ git="https://github.com/mullvad/windows-service-rs.git"}
[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
